mysql-nopv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-nopv
spec:
  selector:
    matchLabels:
      app: mysql-nopv
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-nopv
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
