pod-blue.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pod-blue
  labels:
    app: blue
spec:
  containers:
    - name: container1
      image: hashicorp/http-echo
      args:
        - "-text=blue"
