pod-green-nsb.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pod-green
  namespace: nsb
  labels:
    app: green
spec:
  containers:
    - name: container1
      image: hashicorp/http-echo
      args:
        - "-text=green in nsb"
