pod-yellow.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pod-yellow
  labels:
    app: yellow
spec:
  containers:
    - name: pod1
      image: hashicorp/http-echo
      args:
        - "-text=yellow"
