service-blue-nginx.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-blue
spec:
  selector:
    app: blue
  ports:
    - port: 80
