service-blue.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-blue
spec:
  selector:
    app: blue
  ports:
    - port: 5678
