service-green.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-green
spec:
  selector:
    app: green
  ports:
    - port: 5678
